[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adviceMCTS"
version = "0.0.1"
authors = [
  { name="Debraj Chakraborty", email="jarbedytrobarkahc@gmail.com" },
]
description = "Monte Carlo tree search with symbolic advice"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


